2012-12-02  Steven Bosscher  <steven@gcc.gnu.org>

	* function.h (struct rtl_data): Remove epilogue_delay_list.
	* reorg.c (find_end_label): Simplify always-true test.
	(optimize_skip): Likewise.
	* final.c (leaf_function_p): Don't loop over epilogue_delay_list.
	(leaf_renumber_regs): Likewise.
	* varasm.c (mark_constant_pool): Likewise.
	* except.c (set_nothrow_function_flags): Likewise.
	* cfgrtl.c (print_rtl_with_bb): Likewise.

2012-12-02  Hans-Peter Nilsson  <hp@bitrange.com>

	* config/mmix/mmix.c (mmix_function_value): Set the mode of the
	returned PARALLEL to that of the return-value, not VOIDmode.

2012-12-02  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/extend.texi: Various corrections to punctuation and grammar
	throughout the file.  Use consistent terminology and proper names.
	Correct some minor markup issues.

2010-12-01  Xinliang David Li  <davidxl@google.com>

        * config/i386/i386.c: Allow sign extend instructions (cltd etc)
        on modern CPUs.

2012-12-02  Steven Bosscher  <steven@gcc.gnu.org>

	* reorg.c: Remove an obsolete comment.
	* config/pa/pa.md: Add back the HP-PA comment here, with details.

2012-11-30  Eric Botcazou  <ebotcazou@adacore.com>

	* stor-layout.c (bit_field_mode_iterator::bit_field_mode_iterator): Deal
	with degenerate cases where the bitsize isn't positive.  Rework comment.

2012-11-30  David Edelsohn  <dje.gcc@gmail.com>

	* xcoffout.c (xcoff_tls_data_section_name): Define.
	* xcoffout.h (xcoff_tls_data_section_name): Declare.
	* config/rs6000/rs6000.c (tls_data_section): Define.
	(TARGET_USE_BLOCKS_FOR_DECL_P): Define.
	(rs6000_legitimize_tls_address_aix): New function.
	(rs6000_legitimize_tls_address): Use new function for AIX.
	(rs6000_cannot_force_const_mem): No sum in TLS TOC symbols.
	Allow TLS symbol in constant pool other than ELF.
	(rs6000_legitimate_address_p): Allow TLS symbol other than ELF.
	(rs6000_assemble_visibility): Do not emit anything on AIX.