@@ -1,5 +1,11 @@
 2012-12-02  Steven Bosscher  <steven@gcc.gnu.org>
 
+	* optabs.c (add_equal_note): Do not create self-referencing REG_EQUAL
+	notes.
+	* fwprop.c (forward_propagate_and_simplify): Likewise.
+
+2012-12-02  Steven Bosscher  <steven@gcc.gnu.org>
+
 	* function.h (struct rtl_data): Remove epilogue_delay_list.
 	* reorg.c (find_end_label): Simplify always-true test.
 	(optimize_skip): Likewise.
